<resources>
    <string name="app_name">Chic E-Commerce</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="minimal_chic">Minimal Chic</string>
    <string name="history">History</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet">DON’T HAVE AN ACCOUNT YET?&#160;&#160;</string>
    <string name="sign_up_cap_words">Sign Up</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?&#160;&#160;</string>
    <string name="home_page">Home Page</string>
    <string name="shop_products">Shop Products</string>
    <string name="my_account">My Account</string>
    <string name="wishlist">Wishlist</string>
    <string name="your_cart">Your Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="about">About</string>
    <string name="search">Search</string>

    <string name="edit_account">Edit Account</string>
    <string name="cashmere_silk">CASHMERE &amp; SILK</string>
    <string name="shop_leather_bags">Shop Leather Bags</string>
    <string name="explore_dresses">Explore Dresses</string>
    <string name="sale">Sale %</string>
    <string name="shop">SHOP</string>
    <string name="shop_sale">SHOP SALE</string>
    <string name="search_products">Search products</string>
    <string name="price">Price</string>
    <string name="qnt">Qnt</string>
    <string name="checkout">checkout</string>
    <string name="promo_code">Promo Code</string>
    <string name="total">Total:</string>
    <string name="product_info">Product Info</string>
    <string name="add_to_cart">ADD To CART</string>
    <string name="colors">Colors:</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="please_wait">Please Wait…</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="total_price">Total Price</string>
    <string name="date">Date:</string>
</resources>