<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/menu_home_page"
            android:title="@string/home_page"/>
        <item
            android:id="@+id/menu_shop_products"
            android:title="@string/shop_products"/>
        <item
            android:id="@+id/menu_my_account"
            android:title="@string/my_account"/>
        <item
            android:id="@+id/menu_my_cart"
            android:title="@string/my_cart"/>
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/menu_about"
            android:title="@string/about"/>
    </group>
</menu>