<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.app.chic_ecommerce.signupactivity.presentation.SignupActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pallet_white"
        tools:context=".signupactivity.presentation.SignupActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_section"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="@color/pallet_black"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_cap_words"
                android:textColor="@color/pallet_white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="18dp"/>
            <ImageView
                android:layout_width="19dp"
                android:layout_height="22dp"
                android:background="@drawable/left_arrow"
                android:onClick="back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="18dp"
                android:layout_marginStart="12dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputs_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/header_section"
            android:layout_marginTop="47dp"
            android:paddingHorizontal="57dp">
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:hint="XXXX"
                android:text="@={viewmodel.username}"
                android:textColor="@color/pallet_black"
                android:textColorHint="@color/pallet_grey"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="25dp"
                android:paddingHorizontal="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="14sp"
                android:textColor="@color/pallet_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/usernameEditText"/>
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:hint="XXXX@mail.com"
                android:text="@={viewmodel.mail}"
                android:textColor="@color/pallet_black"
                android:textColorHint="@color/pallet_grey"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
                android:layout_marginTop="58dp"
                android:paddingHorizontal="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/pallet_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/emailEditText"/>
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:hint="********"
                android:text="@={viewmodel.password}"
                android:textColor="@color/pallet_black"
                android:textColorHint="@color/pallet_grey"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"
                android:layout_marginTop="58dp"
                android:paddingHorizontal="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/pallet_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/passwordEditText"/>
            <EditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:hint="********"
                android:text="@={viewmodel.repeatPassword}"
                android:textColor="@color/pallet_black"
                android:textColorHint="@color/pallet_grey"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                android:layout_marginTop="58dp"
                android:paddingHorizontal="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_password"
                android:textSize="14sp"
                android:textColor="@color/pallet_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/repeatPasswordEditText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:textColor="@color/pallet_white"
            android:background="@drawable/rounded_rectangle_80"
            app:backgroundTint="@color/pallet_red"
            android:onClick="signup"
            app:layout_constraintTop_toBottomOf="@+id/inputs_section"
            android:layout_marginHorizontal="58dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/createAccount"
            android:layout_marginTop="84dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="13sp"
                android:textColor="@color/pallet_grey"/>
            <TextView
                android:id="@+id/loginBtn"
                android:inputType="textCapCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/pallet_black"
                android:onClick="login"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>