<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.app.chic_ecommerce.loginactivity.presentation.LoginActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pallet_white"
        tools:context=".loginactivity.presentation.LoginActivity">
        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:background="@drawable/half_girl_shadow"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimal_chic"
            android:textColor="@color/pallet_black"
            android:textSize="37sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="158dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputs_section"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="29dp">
            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@mipmap/mail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="26dp"/>
            <EditText
                android:id="@+id/mailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:hint="XXX@mail.com"
                android:text="@={viewmodel.mail}"
                android:textColor="@color/pallet_black"
                android:textColorHint="@color/pallet_grey"
                android:background="@color/transparent"
                app:layout_constraintTop_toTopOf="@+id/mail_icon"
                app:layout_constraintLeft_toRightOf="@+id/mail_icon"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/pallet_grey"
                app:layout_constraintLeft_toLeftOf="@+id/mailEditText"
                app:layout_constraintBottom_toTopOf="@+id/mailEditText"/>
            <ImageView
                android:id="@+id/pass_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@mipmap/lock"
                app:layout_constraintTop_toBottomOf="@+id/mail_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="59dp"/>
            <EditText
                android:id="@+id/passEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:hint="********"
                android:text="@={viewmodel.password}"
                android:textColor="@color/pallet_black"
                android:textColorHint="@color/pallet_grey"
                android:background="@color/transparent"
                app:layout_constraintTop_toTopOf="@+id/pass_icon"
                app:layout_constraintLeft_toRightOf="@+id/pass_icon"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/pallet_grey"
                app:layout_constraintLeft_toLeftOf="@+id/passEditText"
                app:layout_constraintBottom_toTopOf="@+id/passEditText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:textColor="@color/pallet_white"
            android:background="@drawable/rounded_rectangle_80"
            app:backgroundTint="@color/pallet_black"
            android:onClick="login"
            app:layout_constraintTop_toBottomOf="@+id/inputs_section"
            android:layout_marginHorizontal="33dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            android:layout_marginTop="31dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_yet"
                android:textSize="13sp"
                android:textColor="@color/pallet_grey"/>
            <TextView
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/pallet_black"
                android:onClick="signup"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>