<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.app.chic_ecommerce.mainactivity.presentation.MainActivityViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainactivity.presentation.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pallet_black"
        android:padding="0dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/girl_shadow"
        android:alpha="0.29"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimal_chic"
            android:textSize="37sp"
            android:textColor="@color/pallet_white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="97dp"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/pallet_black"
        app:backgroundTint="@color/pallet_black"
        android:text="@string/log_in"
        android:textColor="@color/pallet_white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:onClick="login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signupBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/signupBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/pallet_red"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/pallet_white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/pallet_red"
            android:onClick="signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/loginBtn"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
        <include
            android:id="@+id/loadingLayout"
            layout="@layout/loading_screen" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>