<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/address"
            android:textColor="@color/pallet_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"/>
        <TextView
            android:id="@+id/orderAddressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/pallet_black"
            app:layout_constraintTop_toTopOf="@+id/address_txt"
            app:layout_constraintLeft_toRightOf="@+id/address_txt"
            android:layout_marginStart="14dp"/>
        <TextView
            android:id="@+id/total_price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/total_price"
            android:textColor="@color/pallet_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_txt"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"/>
        <TextView
            android:id="@+id/orderTotalPriceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/pallet_black"
            app:layout_constraintTop_toTopOf="@+id/total_price_txt"
            app:layout_constraintLeft_toRightOf="@+id/total_price_txt"
            android:layout_marginStart="14dp"/>
        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/date"
            android:textColor="@color/pallet_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_price_txt"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"/>
        <TextView
            android:id="@+id/orderDateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/pallet_black"
            app:layout_constraintTop_toTopOf="@+id/date_txt"
            app:layout_constraintLeft_toRightOf="@+id/date_txt"
            android:layout_marginStart="14dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/date_txt"
            android:layout_marginTop="12dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderProductsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>