<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.app.chic_ecommerce.homefragment.presentation.HomeFragmentViewModel" />
        <variable
            name="session"
            type="com.app.chic_ecommerce.common.data.Session" />
    </data>

    <FrameLayout
        android:id="@+id/homeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homefragment.presentation.HomeFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/saleShop"
                    android:layout_width="0dp"
                    android:layout_height="405dp"
                    android:src="@drawable/girl_shadow"
                    android:scaleType="fitXY"
                    android:background="@color/transparent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/cashmereSilkShop"
                    app:layout_constraintTop_toTopOf="parent"/>
                <LinearLayout
                    android:id="@+id/saleShopLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="@+id/saleShop"
                    app:layout_constraintRight_toRightOf="@+id/saleShop"
                    app:layout_constraintTop_toTopOf="@+id/saleShop"
                    app:layout_constraintBottom_toBottomOf="@+id/saleShop">
                    <TextView
                        android:id="@+id/saleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="@string/sale"
                        android:textColor="@color/pallet_black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/cashmereSilkShop"
                        app:layout_constraintLeft_toLeftOf="@+id/cashmereSilkShop"
                        app:layout_constraintRight_toRightOf="@+id/cashmereSilkShop"/>
                    <Button
                        android:id="@+id/shopBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop"
                        android:textSize="16sp"
                        android:textColor="@color/pallet_white"
                        android:background="@drawable/rounded_rectangle_80"
                        app:backgroundTint="@color/pallet_red"
                        android:paddingHorizontal="40dp"
                        android:paddingVertical="8dp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
                <ImageButton
                    android:id="@+id/cashmereSilkShop"
                    android:layout_width="0dp"
                    android:layout_height="237dp"
                    android:src="@drawable/clothes_hanger"
                    android:scaleType="fitXY"
                    android:background="@color/transparent"
                    app:layout_constraintRight_toLeftOf="@+id/saleShop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:id="@+id/cashmere_silkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/cashmere_silk"
                    android:textColor="@color/pallet_black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/cashmereSilkShop"
                    app:layout_constraintLeft_toLeftOf="@+id/cashmereSilkShop"
                    app:layout_constraintRight_toRightOf="@+id/cashmereSilkShop"
                    android:layout_marginBottom="35dp"/>
                <ImageButton
                    android:id="@+id/leatherBagsShop"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/bag"
                    android:scaleType="fitXY"
                    android:background="@color/transparent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/cashmereSilkShop"
                    app:layout_constraintTop_toBottomOf="@+id/cashmereSilkShop"
                    app:layout_constraintBottom_toBottomOf="@+id/saleShop"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/leatherBagsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/shop_leather_bags"
                    android:textColor="@color/pallet_black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@+id/leatherBagsShop"
                    app:layout_constraintBottom_toBottomOf="@+id/leatherBagsShop"
                    app:layout_constraintLeft_toLeftOf="@+id/leatherBagsShop"
                    app:layout_constraintRight_toRightOf="@+id/leatherBagsShop"/>
                <ImageButton
                    android:id="@+id/exploreDressesShop"
                    android:layout_width="match_parent"
                    android:layout_height="166dp"
                    android:src="@drawable/clothes_hanger_big"
                    android:scaleType="center"
                    android:background="@color/transparent"
                    app:layout_constraintTop_toBottomOf="@+id/leatherBagsShop"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/exploreDressesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/explore_dresses"
                    android:textColor="@color/pallet_black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/exploreDressesShop"
                    app:layout_constraintLeft_toLeftOf="@+id/exploreDressesShop"
                    app:layout_constraintRight_toRightOf="@+id/exploreDressesShop"
                    android:layout_marginBottom="56dp"/>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="580dp"
                    app:layout_constraintTop_toBottomOf="@+id/exploreDressesShop"/>
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabMaxWidth="10dp"
                    app:tabBackground="@drawable/tab_indicator_bg"
                    app:tabPaddingEnd="7dp"
                    app:tabPaddingStart="7dp"
                    android:background="@color/transparent"
                    app:tabIndicatorColor="@color/pallet_black"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/viewPager"
                    android:layout_marginBottom="40dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>